Adjustments made in preparation for joining Track Adjustments

--- a/DataImportAndCleaning.Rmd
+++ b/DataImportAndCleaning.Rmd
@@ -39,7 +39,7 @@ remove(df2,df3,df4,df5,df6)
 The dataframe is next trimmed to omit extraneous columns  Then, names and data types are corrected.  Last, the dataset is filtered to only include runs from motorized teams in 2016. 
 
 ```{r, eval=FALSE}
-df2 <- data.frame(df$id, df$team_name, df$event_name, df$name, df$start_date.y, df$rank,df$performance,    
+df2 <- data.frame(df$id, df$team_name, df$name.x, df$name.y, df$start_date.y, df$rank,df$performance,    
                   df$division)
 colnames(df2) <- c("WebsiteID","TeamName","Contest","TournName","TournDate","Rank","Time","Division")
 
@@ -64,5 +64,3 @@ df2 <- df2 %>% filter((Contest != "Individual Ladder")&
                       (Contest != "Efficiency Replacement")& 
                       (Contest != "Two into One"))
 ```
-
-
