--- a/DataImportAndCleaning.Rmd
+++ b/DataImportAndCleaning.Rmd
@@ -67,3 +67,8 @@ AllData <- AllData %>% filter((TimeContest != "Individual Ladder")&
 AllData$TimeContest <- ifelse(AllData$TimeContest=="3 Man Ladder","Three Man Ladder",AllData$TimeContest)
 
 ```
+
+From the summary statistics gathered in StateSimParams, results are next simulated and then again another summary is taken.  
+
+
+
